# jpeg-dec

./: .gitignore  .replit  CMakeLists.txt  README.md  bitstream.cpp  bitstream.h  byteswap.h  frame.cpp  frame.h  huffman.cpp  huffman.h  main  main.cpp  markers.cpp  markers.h  matrix.cpp  matrix.h  parse.cpp  parse.h  quantize.cpp  quantize.h  scan.cpp  scan.h  skeleton.cpp  skeleton.h  stream.cpp  stream.h  types.h
